test: make webhook PT-scoping test a real broker E2E test